welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: value getMondLargeur
var T = new Array[Color](getMondLargeur())
                         ^