welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T = new Array[Color](getMondLargeur())
	for(i<- 0 to T.length-1){
  	avance(i)
  	T(i)=getCouleurSol()
	}
}
